--- a/commons-vfs/pom.xml
+++ b/commons-vfs/pom.xml
@@ -70,6 +70,11 @@
             <version>1.2</version>
             <scope>provided</scope>
         </dependency>
+        <dependency>
+            <groupId>commons-logging</groupId>
+            <artifactId>commons-logging</artifactId>
+            <version>1.1.1</version>
+        </dependency>
     </dependencies>
     <distributionManagement>
         <repository>
