--- a/akka-scalapb-serialization/pom.xml
+++ b/akka-scalapb-serialization/pom.xml
@@ -49,6 +49,11 @@
             <artifactId>caffeine</artifactId>
             <version>1.2.0</version>
         </dependency>
+        <dependency>
+            <groupId>com.google.protobuf</groupId>
+            <artifactId>protobuf-java</artifactId>
+            <version>3.0.0-beta-2</version>
+        </dependency>
     </dependencies>
     <distributionManagement>
         <repository>
