--- a/leveldbjni/pom.xml
+++ b/leveldbjni/pom.xml
@@ -86,6 +86,16 @@
             <artifactId>guava</artifactId>
             <version>16.0.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.iq80.snappy</groupId>
+            <artifactId>snappy</artifactId>
+            <version>0.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.xerial.snappy</groupId>
+            <artifactId>snappy-java</artifactId>
+            <version>1.0.3</version>
+        </dependency>
     </dependencies>
     <distributionManagement>
         <repository>
