--- a/leveldbjni/pom.xml
+++ b/leveldbjni/pom.xml
@@ -55,47 +55,57 @@
             <scope>provided</scope>
             <classifier>sources</classifier>
         </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.iq80.leveldb</groupId>-->
+            <!--<artifactId>leveldb-api</artifactId>-->
+            <!--<version>${leveldb-api-version}</version>-->
+            <!--<scope>provided</scope>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.iq80.leveldb</groupId>-->
+            <!--<artifactId>leveldb-api</artifactId>-->
+            <!--<version>${leveldb-api-version}</version>-->
+            <!--<scope>provided</scope>-->
+            <!--<classifier>sources</classifier>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.iq80.leveldb</groupId>-->
+            <!--<artifactId>leveldb</artifactId>-->
+            <!--<version>${leveldb-api-version}</version>-->
+            <!--<scope>provided</scope>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.iq80.leveldb</groupId>-->
+            <!--<artifactId>leveldb</artifactId>-->
+            <!--<version>${leveldb-api-version}</version>-->
+            <!--<scope>provided</scope>-->
+            <!--<classifier>sources</classifier>-->
+        <!--</dependency>-->
         <dependency>
-            <groupId>org.iq80.leveldb</groupId>
-            <artifactId>leveldb-api</artifactId>
-            <version>${leveldb-api-version}</version>
-            <scope>provided</scope>
-        </dependency>
-        <dependency>
-            <groupId>org.iq80.leveldb</groupId>
-            <artifactId>leveldb-api</artifactId>
-            <version>${leveldb-api-version}</version>
-            <scope>provided</scope>
-            <classifier>sources</classifier>
-        </dependency>
-        <dependency>
-            <groupId>org.iq80.leveldb</groupId>
+            <groupId>osgi-repacks</groupId>
             <artifactId>leveldb</artifactId>
             <version>${leveldb-api-version}</version>
-            <scope>provided</scope>
         </dependency>
-        <dependency>
-            <groupId>org.iq80.leveldb</groupId>
-            <artifactId>leveldb</artifactId>
-            <version>${leveldb-api-version}</version>
-            <scope>provided</scope>
-            <classifier>sources</classifier>
-        </dependency>
-        <dependency>
-            <groupId>com.google.guava</groupId>
-            <artifactId>guava</artifactId>
-            <version>16.0.1</version>
-        </dependency>
-        <dependency>
-            <groupId>org.iq80.snappy</groupId>
-            <artifactId>snappy</artifactId>
-            <version>0.2</version>
-        </dependency>
-        <dependency>
-            <groupId>org.xerial.snappy</groupId>
-            <artifactId>snappy-java</artifactId>
-            <version>1.0.3</version>
-        </dependency>
+        <!--<dependency>-->
+            <!--<groupId>org.iq80.leveldb</groupId>-->
+            <!--<artifactId>leveldb</artifactId>-->
+            <!--<version>${leveldb-api-version}</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>com.google.guava</groupId>-->
+            <!--<artifactId>guava</artifactId>-->
+            <!--<version>16.0.1</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.iq80.snappy</groupId>-->
+            <!--<artifactId>snappy</artifactId>-->
+            <!--<version>0.2</version>-->
+        <!--</dependency>-->
+        <!--<dependency>-->
+            <!--<groupId>org.xerial.snappy</groupId>-->
+            <!--<artifactId>snappy-java</artifactId>-->
+            <!--<version>1.0.3</version>-->
+        <!--</dependency>-->
     </dependencies>
     <distributionManagement>
         <repository>
