--- a/commons-vfs/pom.xml
+++ b/commons-vfs/pom.xml
@@ -18,7 +18,7 @@
                     <instructions>
                         <Embed-Dependency>*;scope=provided;inline=true</Embed-Dependency>
                         <Import-Package>!com.jcraft.*,!org.apache.commons.codec.*,!org.apache.commons.net.*,!org.apache.jackrabbit.*,!org.apache.tools.*,*</Import-Package>
-                        <_exportcontents>*</_exportcontents>
+                        <_exportcontents>org.apache.commons.vfs2.*</_exportcontents>
                     </instructions>
                 </configuration>
             </plugin>
